update font and bg path

--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -1,18 +1,11 @@
-// @font-face {
-//   font-family: "Bellefair";
-//   src: url("../../fonts/Bellefair-Regular.ttf") format("trueptype");
-//   font-weight: 400;
-//   font-style: normal;
-// }
-
 @font-face {
   font-family: "Barlow Condensed";
-  src: url("../../fonts/BarlowCondensed-Regular.ttf") format("truetype");
+  src: url("../fonts/BarlowCondensed-Regular.ttf") format("truetype");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Barlow";
-  src: url("../../fonts/Barlow-Regular.ttf") format("trueptype");
+  src: url("../fonts/Barlow-Regular.ttf") format("trueptype");
   font-weight: 400;
 }
