update page link

--- a/public/scss/pages/_crew.scss
+++ b/public/scss/pages/_crew.scss
@@ -5,7 +5,7 @@
 /* mobile */
 @media (max-width: 47.9375rem) {
   body:has(main.crew-page) {
-    background: url("../../assets/crew/background-crew-mobile.jpg");
+    background: url("../assets/crew/background-crew-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -116,7 +116,7 @@
 /* tablet */
 @media (min-width: 48rem) and (max-width: 63.9375rem) {
   body:has(main.crew-page) {
-    background: url("../../assets/crew/background-crew-mobile.jpg");
+    background: url("../assets/crew/background-crew-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -223,7 +223,7 @@
 /* desktop */
 @media (min-width: 64rem) {
   body:has(main.crew-page) {
-    background: url("../../assets/crew/background-crew-desktop.jpg");
+    background: url("../assets/crew/background-crew-desktop.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
