--- a/scss/pages/_technology.scss
+++ b/scss/pages/_technology.scss
@@ -8,7 +8,7 @@
     // border: solid 1px red;
     display: flex;
     flex-direction: column;
-    background: url("../../assets/technology/background-technology-mobile.jpg");
+    background: url("../assets/technology/background-technology-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -111,7 +111,7 @@
     // border: solid 1px red;
     display: flex;
     flex-direction: column;
-    background: url("../../assets/technology/background-technology-tablet.jpg");
+    background: url("../assets/technology/background-technology-tablet.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -215,7 +215,7 @@
   body:has(main.tech-page) {
     display: flex;
     flex-direction: column;
-    background: url("../../assets/technology/background-technology-desktop.jpg");
+    background: url("../assets/technology/background-technology-desktop.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
