--- a/src/index.css
+++ b/src/index.css
@@ -1583,5 +1583,11 @@ html {
     max-width: 450px;
   }
 }
+/* animation */
+.animate-tech-img {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out;
+  animation-fill-mode: both;
+}
 
 /*# sourceMappingURL=index.css.map */
