--- a/scss/pages/_technology.scss
+++ b/scss/pages/_technology.scss
@@ -331,3 +331,10 @@
     }
   }
 }
+
+/* animation */
+.animate-tech-img {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out;
+  animation-fill-mode: both;
+}
