update home main padding left and right

--- a/public/scss/pages/_home.scss
+++ b/public/scss/pages/_home.scss
@@ -150,6 +150,7 @@
     grid-template: auto / repeat(2, 1fr);
     align-items: end;
     margin: 128px 0;
+    padding: 0 64px;
 
     span {
       @include text-preset-5;
